paths/usr/share/cargo/registry/gtk4-macros-0.5.6/tests/compile-fail/composite-template-missing-id.rs
rust-gtk4-macros0.5-devel
